# povmol

./: AtomTypeDelegate.cxx  AtomTypeDelegate.h  AtomicProperties.cxx  AtomicProperties.h  AtomicPropertiesBondDetector.cxx  AtomicPropertiesBondDetector.h  BondDetector.h  BondLengthDelegate.cxx  BondLengthDelegate.h  CMakeLists.txt  CoordinationPolyhedraGenerator.cxx  CoordinationPolyhedraGenerator.h  Export.h  Geometry.cxx  Geometry.h  Math3D.cxx  Math3D.h  POVRayPrimatives.cxx  POVRayPrimatives.h  PointTree.cxx  PointTree.h  PovmolBondTableDialog.cxx  PovmolBondTableDialog.h  PovmolBondTableDialogUi.ui  PovmolLookupTableDialog.cxx  PovmolLookupTableDialog.h  PovmolLookupTableDialog.ui  PovmolMainWindow.cxx  PovmolMainWindow.h  PovmolMainWindowUi.ui  QVTKPropertyWidget.cxx  QVTKPropertyWidget.h  QVTKPropertyWidget.ui  TableBasedBondDetector.cxx  TableBasedBondDetector.h  TestHull.cpp  Utility.cxx  Utility.h  XSFReader.cxx  XSFReader.h  (+6 more)
doc/: trasnform.eps
hull/: CMakeLists.txt  hull.c  hull.h
